TMC-C32-HM-Course
add string constants
add description classes and method